--- a/Template/index.html
+++ b/Template/index.html
@@ -7,87 +7,80 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>{% block titlePage %} Welcome to frontoffice {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
 </head>
 <body>
 
 {% block navbar %}
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container">
+        <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+        >
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Events </a>
-              </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Events </a>
+                </li>
             </ul>
-          </div>
-          <div class="collapse navbar-collapse" id="navbarNav">
+        </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Add Event </a>
-              </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Add Event </a>
+                </li>
             </ul>
-          </div>
-
-          <a class="navbar-brand" href="#">welcome</a>
-
-
-
-          <a href="#" type="submit" class="btn btn-primary mx-2"
-            >login</a
-          >
-
-          <a href=" " type="submit" class="btn btn-success">register</a>
-
-
         </div>
 
-        </nav>
+        <a class="navbar-brand" href="#">welcome</a>
 
-    {% endblock %}
 
-{% block content %}
+        <a href="#" type="submit" class="btn btn-primary mx-2"
+        >login</a
+        >
+
+        <a href=" " type="submit" class="btn btn-success">register</a>
+
+
+    </div>
+
+</nav>
+
 {% endblock %}
 
+{% block content %}
+
 <div
-    class="jumbotron jumbotron-fluid text-center"
-    style="background-color: rgb(55, 52, 52)"
-  >
+        class="jumbotron jumbotron-fluid text-center"
+        style="background-color: rgb(55, 52, 52)"
+>
     <div class="container py-5">
-      <h1 class="display-4 text-white">Upcoming events</h1>
-      <p class="lead text-white">
-        Check out our upcoming events and mark your calendars!
-      </p>
+        <h1 class="display-4 text-white">Upcoming events</h1>
+        <p class="lead text-white">
+            Check out our upcoming events and mark your calendars!
+        </p>
     </div>
-  </div>
+</div>
+{% endblock %}
 
 
+{% block body %}
 
 
-
-
-
-    {% block body %}
-
-
-    {% endblock %}
-
+{% endblock %}
 
 
 <script src="{% static 'js/bootstrap.min.js'%}"></script>
